package com.miss.artificial_city;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ArtificialCityApplication {

    public static void main(String[] args) {
        SpringApplication.run(ArtificialCityApplication.class, args);
    }
}
