package com.miss.artificial_city.application.exceptions;

public class BoardNotFoundException extends RuntimeException {
}
