package com.miss.artificial_city.infastructure.db.repositories;

public class BoardRepository {
}
