package com.miss.artificial_city.model.node;

public enum NodeDirection {
    LEFT, RIGHT,UP,DOWN
}
