@startuml

title __ARTIFICIAL_CITY's Class Diagram__\n

  package com.miss.artificial_city {
    class ArtificialCityApplication {
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.repositories {
      interface BoardDao {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class BoardDto {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class BoardEntity {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.mappers {
      class BoardMapper {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.application {
      package com.miss.artificial_city.application.exceptions {
        class BoardNotFoundException {
        }
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.repositories {
      class BoardRepository {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.application {
      interface CreatorService {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.application {
      class CreatorServiceImpl {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class GetSavedBoardRequest {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class GetSavedBoardResponse {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      enum NodeDirection {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class NodeDto {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.entities {
      class NodeEntity {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.db.mappers {
      class NodeMapper {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      enum NodeType {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.dto {
      class SaveBoardRequest {
      }
    }
  }
  

  package com.miss.artificial_city {
    package com.miss.artificial_city.infastructure.endpionts {
      class SimulatorController {
      }
    }
  }
  

  CreatorServiceImpl -up-|> CreatorService
  CreatorServiceImpl o-- BoardDao : boardDao
  GetSavedBoardResponse o-- BoardDto : boardDto
  NodeDto o-- NodeType : nodeType
  NodeDto o-- NodeDirection : direction
  NodeEntity o-- BoardEntity : board
  NodeEntity o-- NodeType : nodeType
  NodeEntity o-- NodeDirection : direction
  SaveBoardRequest o-- BoardDto : boardDto
  SimulatorController o-- CreatorService : creatorService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
